--- a/rive-wrapper.html
+++ b/rive-wrapper.html
@@ -26,7 +26,7 @@
 
   <div class="embed-wrapper">
     <iframe
-      src="https://funny-thing-456658.framer.app/"
+      src="lane_catcher_2.riv"
       scrolling="no"
       allowfullscreen
     ></iframe>
