--- a/rive-wrapper.html
+++ b/rive-wrapper.html
@@ -2,35 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Responsive Rive via Framer</title>
+  <title>Responsive Rive demo</title>
 
   <style>
-    /* 9-by-16 portrait ratio → 1280 ÷ 720 = 1.777… → 177.78 % */
+    /* 9 × 16 portrait wrapper */
     .embed-wrapper{
       position:relative;
       width:100%;
-      padding-top:177.78%;
-      /* remove max-width if you really want it to stretch beyond 720 px */
-      /* max-width:720px; */
+      padding-top:177.78%;   /* 1280 ÷ 720 */
+      max-width:720px;       /* optional cap */
+      margin:0 auto;
     }
-    .embed-wrapper iframe{
+    .embed-wrapper canvas{
       position:absolute;
-      inset:0;          /* shorthand for top:0; right:0; bottom:0; left:0 */
+      inset:0;
       width:100%;
       height:100%;
       border:0;
     }
   </style>
+
+  <script src="https://unpkg.com/rive-js@latest"></script>
 </head>
 <body>
 
   <div class="embed-wrapper">
-    <iframe
-      src="https://funny-thing-456658.framer.app"
-      scrolling="no"
-      allowfullscreen
-    ></iframe>
+    <canvas id="rive"></canvas>
   </div>
+
+  <script>
+    new rive.Rive({
+      src: "./lane_catcher_2.riv",      // keep .riv in the same folder
+      canvas: document.getElementById("rive"),
+      autoplay: true,
+      /* stateMachines: "Main",         // add if you have one
+         onLoad: () => { … }           // set inputs if needed   */
+    });
+  </script>
 
 </body>
 </html>
