--- a/space_mini-game_wrapper.html
+++ b/space_mini-game_wrapper.html
@@ -1,5 +1,5 @@
 <iframe
-  src="https://github.com/FC-Twam/Rive_Space_Mini-game/rive-wrapper.html"
+  src="https://fc-twam.github.io/Rive_Space_Mini-game/"
   width="720"
   height="1280"
   style="border:0;"
