updated the script tag

--- a/rive-wrapper.html
+++ b/rive-wrapper.html
@@ -22,7 +22,7 @@
     }
   </style>
 
-  <script src="https://unpkg.com/rive-js@latest"></script>
+  <script src="https://unpkg.com/@rive-app/canvas@2.7.1"></script>
 </head>
 <body>
 
