--- a/rive-wrapper.html
+++ b/rive-wrapper.html
@@ -26,13 +26,19 @@
 
   <!-- Rive 2 runtime (canvas renderer) -->
   <script src="https://unpkg.com/@rive-app/canvas@2"></script>
-  <!-- tell Iframely (and others) this page itself is a video-style player -->
-<link  rel="player"
-       href="https://fc-twam.github.io/Rive_Space_Mini-game/rive-wrapper.html"
-       type="text/html"
-       width="720" height="1280">
+ 
+  <!-- 1️⃣  explicit “player” – Iframely’s preferred hint -->
+<link rel="player"
+      href="https://fc-twam.github.io/Rive_Space_Mini-game/rive-wrapper.html"
+      type="text/html" width="720" height="1280">
 
-<!-- Open Graph fallback -->
+<!-- 2️⃣  oEmbed discovery – Iframely & many CMSes look for this -->
+<link rel="alternate"
+      type="application/json+oembed"
+      href="https://fc-twam.github.io/Rive_Space_Mini-game/oembed.json"
+      title="Rive mini-game">
+
+<!-- 3️⃣  Open-Graph video fallback (Slack, Discord, etc.) -->
 <meta property="og:type"         content="video.other">
 <meta property="og:video"        content="https://fc-twam.github.io/Rive_Space_Mini-game/rive-wrapper.html">
 <meta property="og:video:type"   content="text/html">
